--- a/war/InternalAudit.css
+++ b/war/InternalAudit.css
@@ -806,5 +806,7 @@ button {
 .pointerStyle{
 	cursor: pointer;
 }
-
+.com-sencha-gxt-theme-neptune-client-base-grid-Css3ColumnHeaderAppearance-Styles-headInner{
+	height:  24px !important;
+	}
 
