--- a/src/com/internalaudit/client/view/AuditListingView.ui.xml
+++ b/src/com/internalaudit/client/view/AuditListingView.ui.xml
@@ -9,7 +9,7 @@
 		
 	<g:VerticalPanel ui:field="mainContainer" spacing="2">
 	
-		<g:Anchor ui:field="resourceButton" styleName="pointerStyle">
+		<g:Anchor ui:field="resourceButton" addStyleNames="pointerStyle jobStatusRow">
 			Show Resources
 		</g:Anchor>
 		<g:Anchor ui:field="jobsButton" styleName="pointerStyle">
