--- a/war/WEB-INF/classes/com/internalaudit/client/view/AuditListingView.ui.xml
+++ b/war/WEB-INF/classes/com/internalaudit/client/view/AuditListingView.ui.xml
@@ -9,7 +9,7 @@
 		
 	<g:VerticalPanel ui:field="mainContainer" spacing="2">
 	
-		<g:Anchor ui:field="resourceButton" addStyleNames="pointerStyle jobStatusRow">
+		<g:Anchor ui:field="resourceButton" addStyleNames="pointerStyle">
 			Show Resources
 		</g:Anchor>
 		<g:Anchor ui:field="jobsButton" styleName="pointerStyle">
