--- a/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
+++ b/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
@@ -1,6 +1,6 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
-	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:s="urn:import:com.sencha.gxt.data.shared" xmlns:f="urn:import:com.sencha.gxt.widget.core.client.form" xmlns:a="urn:import:com.google.gwt.thirdparty.javascript.rhino.head.ast">
+	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:s="urn:import:com.sencha.gxt.data.shared" xmlns:f="urn:import:com.sencha.gxt.widget.core.client.form">
 	<ui:style>
 		.lbluser{
 	padding-top: 10px;
