--- a/war/InternalAudit2.css
+++ b/war/InternalAudit2.css
@@ -709,7 +709,7 @@ border-radius: 32px;
 	padding: 0 0 0 10px;
 }
 
-select {
+listboxDisabled {
   /* for Firefox list box arrow disable */
   -moz-appearance: none;
   /* for Chrome list box arrow disable*/
@@ -717,7 +717,7 @@ select {
 }
 
 /* For IE10 list box arrow disable*/
-select::-ms-expand {
+listboxDisabled::-ms-expand {
   display: none;
 }
 
