13-3-20 Audit Engagement Alignment,sidemenu and 3 tabs view fix,partial done comments in risk assesment

--- a/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
+++ b/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
@@ -30,6 +30,9 @@
 	<g:item>Low</g:item>
 	</g:ListBox>
 	</g:HorizontalPanel>
+	
+	<g:HorizontalPanel ui:field="panelRatingComment">
+	</g:HorizontalPanel>
 
 	<g:HorizontalPanel ui:field="hpnlButtons">
 	<!-- <g:Button ui:field="save" width="100px"> Submit </g:Button>
