--- a/war/InternalAudit2.css
+++ b/war/InternalAudit2.css
@@ -723,3 +723,7 @@ select::-ms-expand {
 {
 	
 }
+.com-sencha-gxt-theme-neptune-client-base-grid-Css3ColumnHeaderAppearance-Styles-headInner
+{
+	height:25px !important;
+}
