--- a/src/com/internalaudit/client/view/FinalAuditablesView.ui.xml
+++ b/src/com/internalaudit/client/view/FinalAuditablesView.ui.xml
@@ -5,9 +5,9 @@
 		
 	</ui:style>
 	<g:HTMLPanel>
-	
+	<g:HorizontalPanel ui:field="hpnlHeading"></g:HorizontalPanel>
 	<div>
-	<g:ScrollPanel width="100%" height="390px" >
+	<g:ScrollPanel width="100%" height="400px" >
 	<g:VerticalPanel ui:field="areas" ></g:VerticalPanel>
 	</g:ScrollPanel>
 	</div>
