--- a/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
+++ b/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
@@ -10,7 +10,7 @@
 	
 	<g:HorizontalPanel>
 	<g:VerticalPanel ui:field="riskFactors" spacing="2"></g:VerticalPanel>
-	<g:VerticalPanel ui:field="vpnlComments"></g:VerticalPanel>
+	<!-- <g:VerticalPanel ui:field="vpnlComments"></g:VerticalPanel>  -->
 	</g:HorizontalPanel>
 	<g:HorizontalPanel>
 	<g:Label width="860px" styleName="boldText">Overall Rating</g:Label>
