--- a/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
+++ b/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
@@ -14,7 +14,7 @@
 	</g:HorizontalPanel>
 	<g:HorizontalPanel>
 	<g:Label width="860px" styleName="boldText">Overall Rating</g:Label>
-	<g:ListBox ui:field="rating">
+	<g:ListBox ui:field="overallRating">
 	<g:item>N/A</g:item>
 	<g:item>High</g:item>
 	<g:item>Medium</g:item>
