12-6-20 DB clean, subProcessList partially working in Audit Engagement, ToDo and IR, 2 new rpc added to get records against user.assignedTo. Hamza Worked on Sampling, import excel in grid

--- a/src/com/internalaudit/client/view/FinalAuditablesView.ui.xml
+++ b/src/com/internalaudit/client/view/FinalAuditablesView.ui.xml
@@ -8,7 +8,7 @@
 	<g:HorizontalPanel ui:field="hpnlHeading"></g:HorizontalPanel>
 	<div>
 	<g:ScrollPanel width="100%" height="400px" >
-	<g:VerticalPanel ui:field="areas" ></g:VerticalPanel>
+	<g:VerticalPanel ui:field="areas" width="100%"></g:VerticalPanel>
 	</g:ScrollPanel>
 	</div>
 	</g:HTMLPanel>
