12-08-2020-FirstUpdation after client copy-Packages features/restrictions added, feedback form alignment and form added

--- a/src/com/internalaudit/client/view/LoginUi.ui.xml
+++ b/src/com/internalaudit/client/view/LoginUi.ui.xml
@@ -89,6 +89,9 @@
 							</g:HorizontalPanel>
 							<g:HorizontalPanel>
 							<g:Anchor ui:field="requestUserName" styleName="register">Request username</g:Anchor>
+							</g:HorizontalPanel> 
+							<g:HorizontalPanel>
+							<g:Anchor ui:field="forgetPassword" styleName="register">Forget Password</g:Anchor>
 							</g:HorizontalPanel>
 						</div>
 
