--- a/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
+++ b/src/com/internalaudit/client/view/RiskAssesmentStrategicView.ui.xml
@@ -1,6 +1,6 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
-	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:s="urn:import:com.sencha.gxt.data.shared" xmlns:f="urn:import:com.sencha.gxt.widget.core.client.form">
+	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:s="urn:import:com.sencha.gxt.data.shared" xmlns:f="urn:import:com.sencha.gxt.widget.core.client.form" xmlns:A="urn:import:com.internalaudit.client.view.AuditEngagement">
 	<ui:style>
 		.lbluser{
 	padding-top: 10px;
@@ -13,22 +13,8 @@
 	<!-- <g:VerticalPanel ui:field="vpnlComments"></g:VerticalPanel>  -->
 	</g:HorizontalPanel>
 	<g:HorizontalPanel>
-	<g:Label width="860px" styleName="boldText">Overall Rating</g:Label>
-	<g:ListBox ui:field="overallRating">
-	<g:item>N/A</g:item>
-	<g:item>High</g:item>
-	<g:item>Medium</g:item>
-	<g:item>Low</g:item>
-	</g:ListBox>
-	</g:HorizontalPanel>
-	<g:HorizontalPanel ui:field="userOption">
-	<g:Label width="860px" addStyleNames="{style.lbluser}" styleName="boldText">UserDefined Rating</g:Label>
-	<g:ListBox ui:field="listBoxUserOption" addStyleNames="{style.lbluser}">
-	<g:item>N/A</g:item>
-	<g:item>High</g:item>
-	<g:item>Medium</g:item>
-	<g:item>Low</g:item>
-	</g:ListBox>
+	<A:LabelBold width="885px">Overall Rating</A:LabelBold>
+	<g:Label ui:field="lblOverallRatings" styleName="boldText">Rating Here</g:Label>
 	</g:HorizontalPanel>
 	
 	<g:HorizontalPanel ui:field="panelRatingComment">
