25-11-2020 RiskAssesment work in progress .PagingGridConfirmableLoader by hamza, company logo

--- a/war/InternalAudit2.css
+++ b/war/InternalAudit2.css
@@ -755,3 +755,7 @@ select::-ms-expand {
  width:200px;
  white-space:pre-wrap;
 }
+.roundedBorder {
+  border-top: 8px solid #bbb;
+  border-radius: 5px;
+}
